# android-opprfpsi

./: .gitignore  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/opprf_psi/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/opprf_psi/: ContactTracingActivity.java  MainActivity.java
app/src/main/libs/arm64-v8a/: libgmp.la  libgmpxx.la
app/src/main/libs/include/: gmp.h
app/src/main/libs/include/abycore/ABY_utils/: ABYconstants.h
app/src/main/libs/include/common/: helpers.h  psi_analytics.h  psi_analytics_context.h
app/src/main/libs/include/cryptoTools/Common/: config.h
app/src/main/libs/include/libOTe/: config.h
app/src/main/libs/include/polynomials/: Mersenne.h
app/src/main/libs/include/relic/: relic_conf.h
app/src/main/res/drawable/: ct_rounded.xml
app/src/main/res/layout/: activity_main.xml  contact_tracing.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/opprf_psi/: ExampleUnitTest.java
gen-libs/: build.gradle
gen-libs/src/main/: AndroidManifest.xml
gen-libs/src/main/cpp/: CMakeLists.txt
gradle/wrapper/: gradle-wrapper.properties
